apply plugin: 'com.android.application'

android {
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    defaultConfig {
        applicationId = "cl.coders.faketraveler"
        minSdk = 21
        compileSdk = 34
        targetSdk = 34
        versionCode = 221
        versionName = "2.2.1"
    }
    buildTypes {
        release {
            minifyEnabled = false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    namespace = 'cl.coders.faketraveler'
    lintOptions {
        disable 'MockLocation'
    }
}

dependencies {
    implementation 'com.google.android.material:material:1.13.0-beta01'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'com.google.android.flexbox:flexbox:3.0.0'
    implementation 'androidx.activity:activity:1.8.0'
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
}


tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}
